✨ a separation of working modes has been created and some code snippets have been refactored!

--- a/config/env/test.env
+++ b/config/env/test.env
@@ -1,5 +1,7 @@
-HOST_DB=localhost
+#Aqui fica os arquivos de conexão em modo test
+HOST_DB=db
 USER_DB=root
 DB_NAME=provaNest
 PASSWORD_DB=rootPassword
 PORT_DB=3306
+SECRET_KEY=8743b52063cd84097a65d1633f5c74f5
