--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": " nest start",
-    "migration": "ts-node ./node_modules/typeorm/cli.js migration:create -n",
-    "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run",
-    "migration:revert": "ts-node ./node_modules/typeorm/cli.js migration:revert",
+    "migration": "NODE_ENV=development ts-node ./node_modules/typeorm/cli.js migration:create -n",
+    "migration:run-dev": "NODE_ENV=development ts-node ./node_modules/typeorm/cli.js migration:run",
+    "migration:revert-dev": "NODE_ENV=development ts-node ./node_modules/typeorm/cli.js migration:revert",
+    "migration:run-prod": "NODE_ENV=production ts-node ./node_modules/typeorm/cli.js migration:run",
+    "migration:revert-prod": "NODE_ENV=production ts-node ./node_modules/typeorm/cli.js migration:revert",
+    "migration:run-test": "NODE_ENV=test ts-node ./node_modules/typeorm/cli.js migration:run",
+    "migration:revert-test": "NODE_ENV=test ts-node ./node_modules/typeorm/cli.js migration:revert",
     "start:dev": "NODE_ENV=development nest start --watch",
     "start:test": "NODE_ENV=test nest start --watch",
     "start:debug": "nest start --debug --watch",
@@ -22,7 +26,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
@@ -33,6 +38,7 @@
     "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
+    "@std/esm": "^0.26.0",
     "@types/graphql": "^14.5.0",
     "apollo-server-express": "^3.4.0",
     "bcrypt": "^5.0.1",
